[project]
name = "Userbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pysocks>=1.7.1",
    "python-dotenv>=1.1.0",
    "telethon>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.3.0",
    "autopep8>=2.3.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
format = "black . && isort ."
lint = "flake8 ."
check = "mypy ."